--- a/app/.settings/org.eclipse.buildship.core.prefs
+++ b/app/.settings/org.eclipse.buildship.core.prefs
@@ -1,7 +1,7 @@
 arguments=--init-script /home/fizlrock/.eclipse/2139989682_linux_gtk_x86_64/configuration/org.eclipse.osgi/55/0/.cp/gradle/init/init.gradle
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(8.1.1))
+connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(/usr/share/java/gradle))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
