--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore Gradle project-specific cache directory
 .gradle
-**/doc_src/
+**/doc_src/**
+doc_src
+images
+*.aux
 
 # Ignore Gradle build output directory
 build
