--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
+    compileJava.options.encoding = 'UTF-8'
 }
 
 application {
